--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,65 +1,105 @@
-﻿@model IEnumerable<BigSchool.Models.Course>
+﻿@model BigSchool.ViewModels.CoursesViewModel
 @{
     ViewBag.Title = "Home Page";
+
 }
 
+
 <div class="row">
-    <ul>
-        @foreach (var course in Model)
+    <ul class="course">
+        @foreach (var course in Model.UpcommingCourses)
         {
-            <li>
-                @course.DateTime - @course.Lecturer.Name
+            <li class="li">
+                <div class="date">
+                    <div class="month">
+                        @course.DateTime.ToString("MM")
+                    </div>
+                    <div class="day">
+                        @course.DateTime.ToString("dd")
+                    </div>
+                </div>
+                <div class="details">
+                    <span class="lecture">
+                        @course.Lecturer.Name
+
+                        @if (Model.ShowAction)
+                        {
+                            <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturerId">Follow</button>
+                        }
+                    </span>
+                    <span class="category">
+                        @course.Category.Name
+                    </span>
+                    @if (Model.ShowAction)
+                    {
+                        <button data-course-id="@course.Id" class="btn btn-default btn-sm js-toggle-attendance">Going?</button>
+                    }
+
+                </div>
             </li>
         }
     </ul>
-</div>
-<ul class="course">
-    @foreach (var course in Model)
-    {
-        <li>
-            <div class="date">
-                <div class="month">
-                    @course.DateTime.ToString("MM")
-                </div>
-                <div class="day">
-                    @course.DateTime.ToString("dd")
-                </div>
-            </div>
-            <div class="details">
-                <span class="lecturer">
-                    @course.Lecturer.Name
-                </span>
-                <span class="category">
-                    @course.Category.Name
-                </span>
-            </div>
-        </li>
-    }
-</ul>
-@*<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    @section scripts
+{
+        <script>
+            $(document).ready(function () {
+                $(".js-toggle-attendance").click(function (e) {
+                    var button = $(e.target);
+                    if (button.hasClass("btn-default")) {
+                        $.post("/api/attendances", { courseId: button.attr("data-course-id") })
+                            .done(function () {
+                                button
+                                    .removeClass("btn-default")
+                                    .addClass("btn-info")
+                                    .text("Going");
+                            })
+                            .fail(function () {
+                                alert("Something Wrong??");
+                            });
+                    } else {
+                        $.ajax({
+                            url: "/api/attendances/" + button.attr("data-course-id"),
+                            method: "DELETE"
+                        })
+                            .done(function () {
+                                button
+                                    .removeClass("btn-default")
+                                    .addClass("btn-info")
+                                    .text("Going");
+                            })
+                            .fail(function () {
+                                alert("Something Wrong??");
+                            });
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>*@
+                    }
+                });
+
+
+                $(".js-toggle-follow").click(function (e) {
+                    var button = $(e.target);
+                    if (button.hasClass("btn-link")) {
+                        $.post("/api/attendances", { courseId: button.attr("data-user-id") })
+                            .done(function () {
+                                button.text("Following");
+                            })
+                            .fail(function () {
+                                alert("Something fail???");
+                            });
+                    } else {
+                        $.ajax({
+                            url: "/api/attendances/" + button.attr("data-user-id"),
+                            method: "DELETE"
+                        })
+                            .done(function () {
+                                button.text("Following");
+                            })
+                            .fail(function () {
+                                alert("Something fail???");
+                            });
+                    }
+                });
+            });
+        </script>
+    }
+</div>
+]
